adding updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Grav Specific
+ Grav Specific
 .sass-cache
+composer.json
 composer.lock
 cache/*
 assets/*
@@ -7,6 +8,17 @@ logs/*
 images/*
 user/data/*
 vendor/*
+webserver-configs/*
+bin/*
+backup/*
+LICENSE.txt
+README.md
+system/*
+.htaccess
+CHANGELOG.md
+CONTRIBUTING.md
+robots.txt
+
 # OS Generated
 .DS_Store*
 ehthumbs.db
