--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
- Grav Specific
+# Grav Specific
 .sass-cache
-vendor/
+composer.json
+composer.lock
+cache/*
+assets/*
+logs/*
+images/*
+user/data/*
+vendor/*
+webserver-configs/*
+bin/*
+backup/*
+LICENSE.txt
+README.md
+system/*
+.htaccess
+CHANGELOG.md
+CONTRIBUTING.md
+robots.txt
+
+# OS Generated
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+*.swp
