--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -10,23 +10,16 @@ header:
   whatido: I Design and Develop for the web.
   description: 
 copyright:
-    - line: &copy; Copyright 2014 CeeVee
-    - line: Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>
+    - line: &copy; Copyright 2016 Terral Lewis
 social:
 - url: "#"
   icon: facebook
 - url: "#"
   icon: twitter
 - url: "#"
-  icon: google-plus
-- url: "#"
   icon: linkedin
 - url: "#"
   icon: instagram
-- url: "#"
-  icon: dribbble
-- url: "#"
-  icon: skype
 
 
 # HOW TO CREATE A VALID ID TO USE:
@@ -41,7 +34,7 @@ social:
 # Use this as your ID below instead!
 
 twitter:
-  id: '657554810648948736' # Your widget ID
+  id: '719134226889732097' # Your widget ID
   domId: 'tw-widget1' # HTML ID used in code
   maxTweets: 3 # How many tweets to display
   enableLinks: 'true' # Enable links
