--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -7,7 +7,7 @@ metadata:
 # Header customization
 header:
   title: I'm Terral
-  whatido: I Design and Develop for the web.
+  whatido: I Design and Develop for the web and beyond.
   description: 
 copyright:
     - line: &copy; Copyright 2016 Terral Lewis
