content and social media updates

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -12,13 +12,13 @@ header:
 copyright:
     - line: &copy; Copyright 2016 Terral Lewis
 social:
-- url: "#"
+- url: "www.facebook.com/TLDesigns-Print-Web-114828665233876"
   icon: facebook
-- url: "#"
+- url: "www.twitter.com/tldesigns_4u"
   icon: twitter
 - url: "#"
-  icon: linkedin
-- url: "#"
+  icon: behance
+- url: "www.instagram.com/tldesigns_everything"
   icon: instagram
 
 
