portfolio, template and style updates

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -12,11 +12,11 @@ header:
 copyright:
     - line: &copy; Copyright 2016 Terral Lewis
 social:
-- url: "www.facebook.com/TLDesigns-Print-Web-114828665233876"
+- url: "www.facebook.com/tldesignseverything"
   icon: facebook
 - url: "www.twitter.com/tldesigns_4u"
   icon: twitter
-- url: "#"
+- url: "www.behance.net/terrallewis"
   icon: behance
 - url: "www.instagram.com/tldesigns_everything"
   icon: instagram
