--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,44 +1,45 @@
-title:
+title: 'Terral Lewis | Frontend Developer/Graphic Designer'
 author:
-  name: Terral Lewis
+  name: 'Terral Lewis'
+  email: tldesignsprintandweb@gmail.com
+taxonomies:
+  - category
+  - tag
 metadata:
-    description: 'Personal website for web developer and graphic designer Terral Lewis'
-    keywords: 'design, development, develop, branding, marketing, best web design, best web development, best graphic design, frontend developer, frontend development, web design, web development, dc web developer, virginia web developer, maryland web developer, dc graphic designer, maryland graphic designer, virginia web designer, web design, web development, graphic design, digital design, print design, logos, web applications, web apps, web design, ui/ux designer, user experience design, ux, ui, web developer, graphic designer, user centered, javascript, wordpress, css, html, git, angularjs, node, php, adobe creative suite, photoshop, illustrator, indesign, website templates, templates, business templates, flyers, corporate flyers, booklet design, booklets, logos, invitations'
-
-# Header customization
+  description: 'Personal website for web developer and graphic designer Terral Lewis'
+  keywords: 'design, development, develop, branding, marketing, best web design, best web development, best graphic design, frontend developer, frontend development, web design, web development, dc web developer, virginia web developer, maryland web developer, dc graphic designer, maryland graphic designer, virginia web designer, web design, web development, graphic design, digital design, print design, logos, web applications, web apps, web design, ui/ux designer, user experience design, ux, ui, web developer, graphic designer, user centered, javascript, wordpress, css, html, git, angularjs, node, php, adobe creative suite, photoshop, illustrator, indesign, website templates, templates, business templates, flyers, corporate flyers, booklet design, booklets, logos, invitations'
+summary:
+  enabled: true
+  format: short
+  size: 300
+  delimiter: '==='
+blog:
+  route: /blog
 header:
-  title: I'm Terral
-  whatido: I Design and Develop for the web and beyond.
-  description: 
+  title: 'I''m Terral'
+  whatido: 'I Design and Develop for the web and beyond.'
+  description: null
 copyright:
-    - line: &copy; Copyright 2016 Terral Lewis
+  -
+    line: 'Copyright 2016 Terral Lewis'
 social:
-- url: "www.facebook.com/tldesignseverything"
-  icon: facebook
-- url: "www.twitter.com/tldesigns_4u"
-  icon: twitter
-- url: "www.behance.net/terrallewis"
-  icon: behance
-- url: "www.instagram.com/tldesigns_everything"
-  icon: instagram
-
-
-# HOW TO CREATE A VALID ID TO USE:
-# Go to www.twitter.com and sign in as normal, go to your settings page.
-# Go to "Widgets" on the left hand side.
-# Create a new widget for what you need eg "user time line" or "search" etc.
-# Feel free to check "exclude replies" if you don't want replies in results.
-# Now go back to settings page, and then go back to widgets page and
-# you should see the widget you just created. Click edit.
-# Look at the URL in your web browser, you will see a long number like this:
-# 657554810648948736
-# Use this as your ID below instead!
-
+  -
+    url: 'http://www.facebook.com/tldesignseverything'
+    icon: facebook
+  -
+    url: 'http://www.twitter.com/tldesigns_4u'
+    icon: twitter
+  -
+    url: 'http://www.behance.net/terrallewis'
+    icon: behance
+  -
+    url: 'http://www.instagram.com/tldesigns_everything'
+    icon: instagram
 twitter:
-  id: 749250541969170432 # Your widget ID
-  domId: 'tw-widget1' # HTML ID used in code
-  maxTweets: 3 # How many tweets to display
-  enableLinks: 'true' # Enable links
-  showInteraction: 'false' # Show interaction
-  showImages: 'false'  # Show images
-  showUser: 'false' # Show user name
+  id: 749250541969170432
+  domId: tw-widget1
+  maxTweets: 3
+  enableLinks: 'true'
+  showInteraction: 'false'
+  showImages: 'false'
+  showUser: 'false'
