changed title attribute

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,4 +1,4 @@
-title: 'Terral Lewis | Frontend Developer/Graphic Designer'
+title: 'Terral Lewis - Frontend Developer/Graphic Designer'
 author:
   name: 'Terral Lewis'
   email: tldesignsprintandweb@gmail.com
