--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -7,7 +7,7 @@ taxonomies:
   - tag
 metadata:
   description: 'Personal website for web developer and graphic designer Terral Lewis. Branding, Graphic Design, Strategy, User Experience, Web Development, App Development'
-  keywords: 'design, development, branding, marketing, web, print, develop, branding, marketing, web design, web development, graphic design, frontend developer, frontend development, dc, virginia, maryland, digital design, print design, logos, web applications, web apps, user experience, ux, ui, web developer, graphic designer, user centered, javascript, wordpress, css, html, git, angularjs, node, php, adobe creative suite, photoshop, illustrator, indesign, website templates, templates, business templates, flyers, corporate flyers, booklet design, booklets, logos, invitations, frontend developer/graphic designer, website, printdesign'
+  keywords: 'design, development, branding, marketing, web, print, developer, branding, marketing, web design, web development, graphic design, frontend developer, frontend development, dc, virginia, maryland, digital design, print design, logos, web applications, web apps, user experience, ux, ui, web developer, graphic designer, user centered, javascript, wordpress, css, html, git, angularjs, node, php, adobe creative suite, photoshop, illustrator, indesign, website templates, templates, business templates, flyers, corporate flyers, booklet design, booklets, visual, roadmaps, logos, invitations, frontend developer/graphic designer, website, printdesign'
 summary:
   enabled: true
   format: short
