updated smtp to use ssl encryption

--- a/user/config/plugins/email.yaml
+++ b/user/config/plugins/email.yaml
@@ -8,7 +8,7 @@ mailer:
   smtp:
     server: smtp.gmail.com
     port: 25
-    encryption: none
+    encryption: ssl
     user: tldesignsprintandweb@gmail.com
     password: Allcity1
   sendmail:
