--- a/user/config/plugins/email.yaml
+++ b/user/config/plugins/email.yaml
@@ -6,7 +6,7 @@ to_name: 'Terral Lewis'
 mailer:
   engine: smtp
   smtp:
-    server: smtp.gmail.com
+    server: 'ssl://smtp.gmail.com'
     port: 25
     encryption: ssl
     user: tldesignsprintandweb@gmail.com
