--- a/user/plugins/email/email.yaml
+++ b/user/plugins/email/email.yaml
@@ -1,16 +1,16 @@
 enabled: true
 from: "{{form.value.email}}"
 from_name: "{{form.value.name}}"
-to: 'tldesignsprintandweb@gmail.com'
-to_name: 'Terral Lewis'
+to: tldesignsprintandweb@gmail.com
+to_name: Terral Lewis
 mailer:
   engine: mail
   smtp:
     server: localhost
     port: 25
     encryption: none
-    user: ''
-    password: ''
+    user: tldesignsprintandweb@gmail.com
+    password: tldesigns
   sendmail:
-    bin: '/usr/sbin/sendmail'
+    bin: /usr/sbin/sendmail
 content_type: text/html
