--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 .sass-cache
 composer.json
 composer.lock
-cache/
+cache/*
 assets/*
-logs/
+logs/*
+idea/*
 images/*
 user/data/*
 user/accounts/*
